[gd_scene load_steps=14 format=3 uid="uid://b12bmd8sop5od"]

[ext_resource type="Script" path="res://main.gd" id="1_c3otq"]
[ext_resource type="PackedScene" uid="uid://k7ql7daqq1kt" path="res://bunker.tscn" id="1_ngf4n"]
[ext_resource type="PackedScene" uid="uid://doixoh75hajk2" path="res://cannon.tscn" id="1_x32ra"]
[ext_resource type="Texture2D" uid="uid://g2hcaluue7qd" path="res://BG (4).png" id="2_jm8ah"]
[ext_resource type="PackedScene" uid="uid://oj6y6s43nkgd" path="res://boss.tscn" id="5_m76ku"]
[ext_resource type="PackedScene" uid="uid://b5kysgfllcfww" path="res://shop.tscn" id="6_486qw"]
[ext_resource type="Theme" uid="uid://c54kwsqechm6o" path="res://new_theme.tres" id="7_qusyj"]
[ext_resource type="AudioStream" uid="uid://cxrv60gsamwi2" path="res://GWJ56.wav" id="8_l2tlp"]

[sub_resource type="Curve2D" id="Curve2D_okigp"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1213, 680, 0, 0, 0, 0, -86, 679, 0, 0, 0, 0, -86, -50, 0, 0, 0, 0, 1213, -50, 0, 0, 0, 0, 1213, 680)
}
point_count = 5

[sub_resource type="Animation" id="Animation_1yfmp"]
resource_name = "Waves"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/Label:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-265, 78), Vector2(1200, 78)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sgowr"]
_data = {
"Waves": SubResource("Animation_1yfmp")
}

[sub_resource type="Animation" id="Animation_paxmj"]
resource_name = "Tips"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer2/Tips:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-30, 684), Vector2(-16, 507)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1fe10"]
_data = {
"Tips": SubResource("Animation_paxmj")
}

[node name="Main" type="Node2D"]
script = ExtResource("1_c3otq")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(576, 324)
scale = Vector2(8, 8)
texture = ExtResource("2_jm8ah")

[node name="Bunker" parent="." instance=ExtResource("1_ngf4n")]
position = Vector2(577, 338)

[node name="Cannon" parent="." instance=ExtResource("1_x32ra")]
position = Vector2(576, 324)

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_okigp")

[node name="EnemySpawnLocations" type="PathFollow2D" parent="EnemyPath"]
position = Vector2(1213, 680)
rotation = -3.14082

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 15.0

[node name="Shop" parent="." instance=ExtResource("6_486qw")]
offset_right = 1152.0
offset_bottom = 648.0

[node name="Boss" parent="Shop" instance=ExtResource("5_m76ku")]
position = Vector2(1152, 366)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sgowr")
}

[node name="Label" type="Label" parent="AnimationPlayer"]
offset_left = -265.0
offset_top = 78.0
offset_right = -127.0
offset_bottom = 137.0
theme = ExtResource("7_qusyj")
text = "Wave 1"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_l2tlp")
volume_db = -80.0
autoplay = true

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1fe10")
}

[node name="Tips" type="Label" parent="AnimationPlayer2"]
offset_left = -22.0
offset_top = 723.0
offset_right = 1180.0
offset_bottom = 841.0
theme = ExtResource("7_qusyj")
text = "Tip: Use W & D or arrowkeys to rotate 
walls when placing!"
horizontal_alignment = 1

[connection signal="bullet" from="Cannon" to="." method="_on_cannon_bullet"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="WaveTimer" to="." method="_on_wave_timer_timeout"]
[connection signal="cannonBought" from="Shop" to="." method="_on_shop_cannon_bought"]
[connection signal="cont" from="Shop" to="." method="_on_shop_cont"]
[connection signal="wallBought" from="Shop" to="." method="_on_shop_wall_bought"]
[connection signal="died" from="Shop/Boss" to="Shop" method="_on_enemy_1_died"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
